# gameboiadvance

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  containers.natvis  main.cpp
.github/workflows/: gameboiadvance.yml
cmake/: RPi3CrossCompile.cmake  StandardProjectSettings.cmake
gba/: CMakeLists.txt
gba/cmake/: version.h.in
gba/include/gba/: archive.h  core.h  core_bus.inl  gba.h  keypad.h  version.h
gba/include/gba/apu/: apu.h  apu_resampler.h  apu_sound_buffer.h  apu_types.h
gba/include/gba/arm/: arm7tdmi.h  dma_controller.h  irq_controller_handle.h  mmio_addr.h  timer.h
gba/include/gba/cartridge/: backup.h  gamepak.h  gamepak_db.h  rtc.h
gba/include/gba/core/: container.h  fwd.h  integer.h  math.h  memory.h  scheduler.h
gba/include/gba/core/event/: delegate.h  event.h
gba/include/gba/cpu/: arm7tdmi.h  arm7tdmi_decoder_arm.inl  arm7tdmi_decoder_table_gen.h  arm7tdmi_decoder_thumb.inl  bus_interface.h  cpu.h  dma_controller.h  irq_controller_handle.h  mmio_addr.h  timer.h
gba/include/gba/helper/: algorithm.h  bitflags.h  filesystem.h  forceinline.h  function_ptr.h  gzip.h  lookup_table.h  macros.h  range.h  sort.h  static_for.h  variant_visit.h
gba/include/gba/ppu/: ppu.h  ppu_render.inl  ppu_types.h  types.h
gba/src/: core_bus.cpp  dummy.cpp
gba/src/apu/: apu.cpp  apu_noise_channel.cpp  apu_pulse_channel.cpp  apu_wave_channel.cpp
gba/src/arm/: arm7tdmi.cpp  arm7tdmi_alu.cpp  arm7tdmi_io.cpp  arm7tdmi_isa_arm.cpp  arm7tdmi_isa_thumb.cpp  dma_controller.cpp  irq_controller_handle.cpp  timer.cpp
gba/src/cartridge/: backup.cpp  gamepak.cpp  gamepak_db.cpp  rtc.cpp
gba/src/cpu/: arm7tdmi.cpp  arm7tdmi_alu.cpp  arm7tdmi_bus.cpp  arm7tdmi_isa_arm.cpp  arm7tdmi_isa_thumb.cpp  cpu.cpp  dma_controller.cpp  irq_controller_handle.cpp  timer.cpp
gba/src/helper/: filesystem.cpp  gzip.cpp
gba/src/ppu/: ppu.cpp  ppu_render.cpp  ppu_window.cpp
gba_debugger/: CMakeLists.txt
gba_debugger/include/gba_debugger/: apu_debugger.h  arm_debugger.h  breakpoint_database.h  cpu_debugger.h  debugger.h  debugger_helpers.h  disassembler.h  disassembly_entry.h  fmt_integer.h  gamepak_debugger.h  keypad_debugger.h  lookup_table.h  memory_debugger.h  ppu_debugger.h  preferences.h
gba_debugger/src/: apu_debugger.cpp  arm_debugger.cpp  breakpoint_database.cpp  cpu_debugger.cpp  debugger.cpp  disassembler.cpp  disassembly_entry.cpp  gamepak_debugger.cpp  keypad_debugger.cpp  memory_debugger.cpp  ppu_debugger.cpp
gba_frontend/: CMakeLists.txt
gba_frontend/include/frontend/: frontend.h
gba_frontend/src/: frontend.cpp
test/: CMakeLists.txt
test/include/: test_prelude.h
test/src/: archive.cpp  backup.cpp  integer.cpp  main.cpp  math.cpp  rtc.cpp
